--- a/package.json
+++ b/package.json
@@ -4,16 +4,6 @@
   "private": true,
   "dependencies": {
     "@sentry/browser": "^5.16.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/history": "^4.7.6",
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.155",
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
@@ -24,10 +14,22 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "sweetalert2": "^9.14.0",
+    "sweetalert2": "^9.14.0"
+  },
+  "devDependencies":{
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/history": "^4.7.6",
+    "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.155",
+    "@types/node": "^14.0.11",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
