--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SENTRY_DNS=https://b4b4bbfc3bf84bddaaa637eb542b8485@o403744.ingest.sentry.io/5266722
-REACT_APP_STAR_WARS_BASE_URL=http://star-wars-api.unifacef.herokuapp.com
+REACT_APP_STAR_WARS_BASE_URL=https://star-wars-api-unifacef.herokuapp.com
