--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "mobx-react-router": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-onesignal": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sweetalert2": "^9.14.0"
   },
-  "devDependencies":{
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
