--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_SENTRY_DNS=https://b4b4bbfc3bf84bddaaa637eb542b8485@o403744.ingest.sen
 REACT_APP_STAR_WARS_BASE_URL=https://star-wars-api-unifacef.herokuapp.com
 REACT_APP_ECONOMINA_URL=https://economia.awesomeapi.com.br/json/all
 REACT_APP_ONE_SIGNAL=86ea2149-66b9-4e42-a092-e5cd46cb2371
+REACT_APP_CEP_URL=http://cep.republicavirtual.com.br/web_cep.php
