--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_ECONOMINA_URL=https://economia.awesomeapi.com.br/json/all
 REACT_APP_ONE_SIGNAL=86ea2149-66b9-4e42-a092-e5cd46cb2371
 REACT_APP_CEP_URL=http://cep.republicavirtual.com.br/web_cep.php
 REACT_APP_GITHUB_URL=https://api.github.com
+REACT_APP_CORONA_URL=https://api.covid19api.com
